chore: add checkout step to render job

--- a/.github/workflows/validate-cv.yml
+++ b/.github/workflows/validate-cv.yml
@@ -92,5 +92,8 @@ jobs:
       contents: write
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v6.0.1
+
       - name: Placeholder step
         run: echo "Placeholder for render-resume job"
