--- a/.github/workflows/validate-cv.yml
+++ b/.github/workflows/validate-cv.yml
@@ -95,5 +95,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6.0.1
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install render themes
+        run: |
+          bun add jsonresume-theme-bold-header-statement
+          bun add jsonresume-theme-nordic-minimal
+          bun add jsonresume-theme-french-atelier
+          bun add jsonresume-theme-sales-hunter
+
       - name: Placeholder step
         run: echo "Placeholder for render-resume job"
