add pull requests write permission

--- a/.github/workflows/validate-cv.yml
+++ b/.github/workflows/validate-cv.yml
@@ -90,6 +90,7 @@ jobs:
     # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout code
