--- a/.github/workflows/validate-cv.yml
+++ b/.github/workflows/validate-cv.yml
@@ -127,20 +127,16 @@ jobs:
           files: rendered/** # Only track changes in rendered/
           files_ignore: rendered/.gitkeep # Optional: Ignore .gitkeep if present
 
-      - name: Create new branch for rendered CV
-        if: steps.changed-files.outputs.any_changed == 'true'
-        run: |
-          BRANCH_NAME="update-rendered-cv-${{ github.run_id }}"
-          echo "branch_name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
-        id: create_branch
-
       - name: Commit rendered files
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
+          BRANCH_NAME="update-rendered-cv-${{ github.run_id }}"
           git config user.name "render-cv[bot]"
           git config user.email "render-cv[bot]@users.noreply.github.com"
-          git add rendered/
+          git checkout -b $BRANCH_NAME
+          git add rendered/*
           git commit -m "chore: update rendered CV files"
+          git push origin $BRANCH_NAME
 
       - name: Create pull request
         if: steps.changed-files.outputs.any_changed == 'true'
