--- a/.github/workflows/validate-cv.yml
+++ b/.github/workflows/validate-cv.yml
@@ -82,11 +82,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 #v6.0.1
 
-      - name: Publish resume to gist
+      - name: Publish resume to gist (english only)
         env:
           GH_TOKEN: ${{ secrets.GH_GIST_TOKEN }}
         run: |
-          gh gist edit 8e587fe79ca40a637589b1d2d5c9373d resume-base.json
+          gh gist edit 8e587fe79ca40a637589b1d2d5c9373d resume-base-en.json
 
   render-resume:
     needs: validate-resume
