--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,14 +1,26 @@
 name: Deploy CV to GitHub Pages
 
 on:
-  # Runs on pushes to main that affect the rendered CV
+  # Runs on pushes to main that affect resume data or rendering
   push:
     branches:
       - main
     paths:
-      - 'rendered/**'
+      - 'resume-*.json'
+      - 'scripts/**'
+      - 'themes/**'
       - '.github/workflows/deploy-pages.yml'
-  
+
+  # Runs on pull requests to main for testing
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'resume-*.json'
+      - 'scripts/**'
+      - 'themes/**'
+      - '.github/workflows/deploy-pages.yml'
+
   # Allows manual trigger from Actions tab
   workflow_dispatch:
 
@@ -32,16 +44,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 #v6.0.1
-      
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@3d267786b128fe76c2f16a390aa2448b815359f3 #v2.1.2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: |
+          bun install
+
+      - name: Render CV for GitHub Pages (phone stripped)
+        run: bun run scripts/for-github-actions/render-for-github-pages.ts nordic-minimal --strip-phone
+
+      - name: Verify phone number is stripped
+        run: |
+          if grep -i "phone" github-pages/*.html; then
+            echo "ERROR: Phone number found in GitHub Pages files!"
+            exit 1
+          fi
+          echo "✓ Phone number successfully stripped from all files"
+
       - name: Setup Pages
         uses: actions/configure-pages@4b4cf8f0e3cce836d288935dc6f57e053d935312 #v5.0.0
-      
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@84bb4cd4b733d5c320c9c9cfbc354937524f4d64 #v3.0.1
         with:
-          # Upload the rendered directory
-          path: 'rendered'
-      
+          # Upload the github-pages directory (with phone stripped)
+          path: 'github-pages'
+
       - name: Deploy to GitHub Pages
+        # Only deploy on push to main, not on PRs
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         id: deployment
-        uses: actions/deploy-pages@5057b7e0d76ded90cec13763330f25f29d0e5e44 #v4.0.7
+        uses: actions/deploy-pages@5057b7e0d76ded90ec13763330f25f29d0e5e44 #v4.0.7
