--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "render": "bun run scripts/render-resume.ts",
-    "render:github-pages": "bun run scripts/for-github-actions/render-for-github-pages.ts",
+    "render:github-pages": "bun run scripts/render-resume.ts --output-dir github-pages --strip-phone",
     "validate-schema": "bun run scripts/for-github-actions/validate-schema.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
