--- a/.github/workflows/publish-to-github-pages.yml
+++ b/.github/workflows/publish-to-github-pages.yml
@@ -55,8 +55,8 @@ jobs:
       - name: Configure Git
         working-directory: target
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "niceplace-cv-updater[bot]"
+          git config user.email "niceplace-cv-updater[bot]@users.noreply.github.com"
 
       - name: Create and checkout branch
         working-directory: target
