--- a/.github/workflows/publish-to-github-pages.yml
+++ b/.github/workflows/publish-to-github-pages.yml
@@ -19,12 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout CV repo
-        uses: actions/checkout@v6.0.1 # 8e8c483db84b4bee98b60c0593521ed34d9990e8
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 #v6.0.1
         with:
           path: cv
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v2.1.2 # 3d267786b128fe76c2f16a390aa2448b815359f3
+        uses: oven-sh/setup-bun@3d267786b128fe76c2f16a390aa2448b815359f3 #v2.1.2
         with:
           bun-version: latest
 
@@ -41,7 +41,7 @@ jobs:
             --combined
 
       - name: Checkout niceplace.github.io
-        uses: actions/checkout@v6.0.1 # 8e8c483db84b4bee98b60c0593521ed34d9990e8
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 #v6.0.1
         with:
           repository: Niceplace/niceplace.github.io
           path: target
